[project]
name = "baum_CodersBringChange"
version = "0.0.2"
authors = [
  { name="Loek van den Ouweland", email="trainer@codersbringchange.com" },
]
description = "Visualizes directory tree from the current command line folder."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = {text = "MIT"}

[project.urls]
Homepage = "https://github.com/pythonforeveryonetraining/baum"
Issues = "https://github.com/pythonforeveryonetraining/baum/issues"

[project.scripts]
baum = "baum_CodersBringChange.tree:main"
